# canvas-proxy-api

./: Makefile  README.md
app/: .gitignore  app.yaml  app_config.py  fs_config.py  pyproject.toml
app/_test_files/: student-data.xlsx  test.csv
app/alembic/: env.py
app/alembic/versions/: 15cd9c84745b_added_canvas_user_model.py  178c3736a072_added_enrollment_model.py  301832e1f1c8_added_assignment_model.py  3139ddd9ed90_added_user_model.py  34cacbc8f337_added_canvas_course_model.py  3b9b2f7c0675_added_student_and_student_vector_tables.py  3c1ed3eb16c2_changed_hashed_password_encrypted_.py  3ee23692f284_added_unique_constraint_on_canvas_user_.py  40e6fb4b7f51_added_failed_and_error_json_to_.py  4b01a88f9961_main_embedding_for_512_dim_inside_.py  5f5372966bf5_added_file_record_model.py  a14ecb624c99_added_web_id_to_attendances.py  adeb34884a4c_added_recognition_history_model.py  b32a9d509776_added_uniq_constraint_on_student_id_and_.py  cf0402dedf03_removed_first_and_lastname_from_student.py  d46df0750dd5_removed_redundunt_columns.py  df0a0cca6bd6_fixes_for_process_single_attendance.py  e3bbbd5f5801_removed_assignment_id_from_recognition_.py  e67cfd0326b1_changed_canvas_id_type_to_str_for_.py  eee34468778d_added_512_and_4096dim_columns_to_.py  f00615fa9d82_added_attendance_model.py  fb15572e48d0_added_assignment_groups.py  ffcdad05b663_changed_vector_dimension_128_192.py
app/broker/: __init__.py  config.py  context.py  get_client.py
app/celery_app/: __init__.py  celery_config.py
app/cli/: __init__.py  dbdrop.py  dbinit.py
app/db/: __init__.py  base_repo.py  config.py  data_repo.py  get_db_session.py  session_context.py  with_db_session.py
app/log/: __init__.py  config.py
app/ml/: __init__.py  face_encoder.py  model.py  service.py
app/src/dto/: assignment_dto.py  attendance_dto.py  auth_dto.py  canvas_assignment_dto.py  canvas_course_dto.py  canvas_dto.py  enrollment_dto.py  file_record_dto.py  recognition_history_dto.py  student_dto.py
app/src/enums/: attendance_status.py  attendance_value.py
app/src/errors/: attendance_process_error.py  base_error.py  core_errors.py  utils.py
app/src/jobs/: attendance_process_job.py  base_queue_service.py  load_data_from_source_job.py
app/src/models/: __init__.py  assignment.py  assignment_group.py  attendance.py  canvas_course.py  canvas_user.py  enrollment.py  file_record.py  recognition_history.py  student.py  student_vector.py  user.py
app/src/proxies/: canvas_async_proxy.py  canvas_proxy_provider.py
app/src/repositories/: assignment_group_repo.py  assignment_repo.py  attendance_repo.py  canvas_course_repo.py  canvas_repo.py  canvas_user_repo.py  enrollment_repo.py  file_fs_repo.py  file_record_repo.py  recognition_history_repo.py  student_repo.py  student_vector_repo.py  user_repo.py
app/src/services/: assignment_service.py  attendance_process_service.py  attendance_service.py  auth_service.py  canvas_assignment_service.py  canvas_course_service.py  face_recognition_service.py  recognition_history_service.py  service_factory.py  source_data_load_queue_service.py  source_data_load_service.py  student_service.py  upload_service.py
app/tests/: base_test.py  test_app_config.py
app/utils/: __init__.py  create_properties.py  custom_mimetypes.py  dencrypt.py  easter.py  generate_canvas_assignment_data.py  lock.py  read_config_file.py
app/web/: main.py  web_application.py
(+66 files in other folders)
