[tool.poetry]
name = "canvas-proxy-api"
version = "0.1.0"
description = ""
authors = ["bl1nkker <nurovich14@gmail.com>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
cleo = "^0.8.1"


pydantic = "^2.10.6"
uvicorn = "^0.34.0"
numpy = "^2.2.3"
python-multipart = "^0.0.20"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
db-init = "cli:main"