[tool.poetry]
name = "canvas-proxy-api"
version = "0.1.0"
description = ""
authors = ["bl1nkker <nurovich14@gmail.com>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
cleo = "^0.8.1"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
numpy = "2.1.3"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
psycopg2 = "^2.9.10"
structlog = "^25.1.0"
asgi-correlation-id = "^4.3.4"

alembic = "^1.14.1"
pillow = "^11.1.0"
ai-edge-litert = "^1.1.2"
opencv-python = "^4.11.0.86"
shortuuid = "^1.0.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli:main"