[project]
name = "canvas-proxy-api"
version = "0.1.1a10"
description = ""
authors = [{name = "bl1nkker", email = "nurovich14@gmail.com"}]

[tool.poetry]
packages = [
    { include = "src" },
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
cleo = "^0.8.1"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
numpy = "2.1.3"
python-multipart = "^0.0.20"
pyyaml = "^6.0.2"
psycopg2 = "^2.9.10"
structlog = "^25.1.0"
asgi-correlation-id = "^4.3.4"

alembic = "^1.14.1"
pillow = "^11.1.0"
ai-edge-litert = "^1.2.0"
opencv-python = "^4.11.0.86"
shortuuid = "^1.0.13"
pgvector = "^0.3.6"
aiohttp = "^3.11.13"
bcrypt = "^4.3.0"
cryptography = "^44.0.2"
httpx = "^0.28.1"
celery = "^5.4.0"
redis = "^5.2.1"
pytest-timeout = "^2.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[poetry.group.dev.dependencies]

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.8.0"
pytest-cov = "^4.1.0"

pytest-asyncio = "^0.25.3"
[tool.poetry.group.linter.dependencies]
ruff = "^0.9.9"

[tool.ruff]
exclude = [
    "alembic/",
    ".venv/"
]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]  # Включаем полезные правила
ignore = ["E501"]  # Отключаем правило длины строки (E501)
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-vvv --cov"
testpaths = ["tests"]

[tool.poetry.scripts]
cli = "cli:main"